# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-10-04 Natanael Copa   <ncopa at alpinelinux dot org>

    * Fix autoconf Erlang version check for aarch64

2018-09-22 Michael Truog   <mjtruog at protonmail dot com>

    * Update backward-cpp
    * Update travis build to use GCC 7 and clang 5

2018-09-16 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 1.7.4 released

2018-09-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_core Erlang application compiler dependency
    * Add CloudI Service API code_status output in cloudi_core CT tests

2018-09-14 Michael Truog   <mjtruog at protonmail dot com>

    * Add support for Haskell >= 8.4.1
    * Update all Haskell CloudI API dependencies

2018-09-08 Michael Truog   <mjtruog at protonmail dot com>

    * Simplify the CloudI Service API dashboard view_log.html page
    * Add fields to the CloudI Service API code_status function
      (runtime_cloudi_start, runtime_cloudi_total) and change
      runtime_changes to runtime_cloudi_changes

2018-09-07 Michael Truog   <mjtruog at protonmail dot com>

    * Improvements to CloudI release scripts
        * reboot command checks the vm.args for -heart
        * erl_crash.dump is always written (with or without -heart)
        * heart defaults are constants

2018-09-01 Michael Truog   <mjtruog at protonmail dot com>

    * Fix small error in Python and Python/C msg_size source code
    * Improve programmatic Python version checking

2018-08-25 Michael Truog   <mjtruog at protonmail dot com>

    * Convert the CloudI Service API dashboard code_path.html 
      and log_settings.html to utilize JSON responses from
      cloudi_service_api_requests
    * Fix the CloudI Service API functions logging_syslog_set and
      logging_formatters_set so undefined is a valid parameter

2018-08-18 Michael Truog   <mjtruog at protonmail dot com>

    * Add fields to the CloudI Service API code_status function